crates/apollo-compiler/test_data/diagnostics/0031_input_object_with_duplicate_fields.txt
Error: the value `x` is defined multiple times
    ╭─[0031_input_object_with_duplicate_fields.graphql:9:3]
    │
  9 │   x: Float
    │   ────┬───  
    │       ╰───── previous definition of `x` here
 10 │   x: Float
    │   ────┬───  
    │       ╰───── `x` redefined here
    │ 
    │ Help: `x` field must only be defined once in this input object definition.
────╯

